Bug 115750 - Hang when opening the Fontwork dialog LibO6.1.0.0+
Summary: Hang when opening the Fontwork dialog LibO6.1.0.0+
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0 target:6.0.2
Keywords: bibisected, bisected, perf, regression
Depends on:
Blocks:
 
Reported: 2018-02-15 15:57 UTC by Telesto
Modified: 2018-02-17 08:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-02-15 15:57:44 UTC
Description:
Hang when opening the Fontwork dialog

Steps to Reproduce:
1. Open Writer/Draw
2. Insert -> Fontwork -> Hang

Actual Results:  
Hang

Expected Results:
Should work


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.1.0.0.alpha0+
Build ID: 3c913c3844acae8ee0d80ab174133bdc7677efea
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-02-14_00:19:27
Locale: nl-NL (nl_NL); Calc: CL

but not in
Version: 6.1.0.0.alpha0+
Build ID: 06cfd5a962f9d8d9462fc270f1b1f730c90bddfe
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Aron Budea 2018-02-15 16:36:00 UTC
It doesn't hang completely, but it does take a long time to open that window (and it behaves quite strangely).
Checked using LO 6.1 x64 daily build (2018-02-14_23:48:44, 09fcdbd5e0ae35fb7db8c8784329035edd82573b).
Comment 2 Heiko Tietze 2018-02-15 16:52:23 UTC
With a fresh build from master (fetch all, reset hard, make clean) it takes several seconds to open the gallery. And on the first deck some of the arrows are scrambled. Also icons for font color and background are white (tested with Tango and Breeze).

I get these debug messages

warn:vcl.gdi:10619:10619:vcl/headless/svpgdi.cxx:239: non default depth bitmap, slow convert, upscale the input"
warn:svx:10619:10619:svtools/source/control/valueacc.cxx:653: Calling disposed object. Throwing exception:
Comment 3 Xisco Faulí 2018-02-15 17:03:33 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2018-02-13 11:57:50 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-02-13 15:01:43 +0100
commit 6cb383da1be97f010552d08fbd631e14547aec41 (patch)
tree 21e8ab2b41d1d36abd16e7400ac0eee18b9fe08a
parent 0fa67a1f2b92c26e45c1b2efd01728cb55f4a83b (diff)
ofz#5428 Timeout

Bisected with: bibisect-linux64-6.1

Adding Cc: to Caolán McNamara
Comment 4 Caolán McNamara 2018-02-16 09:21:17 UTC
turns out WriteStream is broken wrt len arg
Comment 5 Commit Notification 2018-02-16 11:14:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bcdaaf62d41728eb757ff2b9cb95c2df2791e2f4

Resolves: tdf#115750 SvStream::WriteStream was broken

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2018-02-16 13:35:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62aba0e74c849bdb82b1b3aaac93a63914f98e41&h=libreoffice-6-0

Resolves: tdf#115750 SvStream::WriteStream was broken

It will be available in 6.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.