Resolves: tdf#115750 SvStream::WriteStream was broken

and didn't stop copying at the size limit arg

Change-Id: I8f1be0310160f5158d2f64c62d6b2c09c0157930